syntax = "proto3";

package devices;

service ManageDevice {
  rpc command (CommandRequest) returns (CommandReply);
  rpc getState (DeviceRequest) returns (TvState);
}

message CommandRequest {
  string device_name = 1;
  string order = 2;
  int32 value = 3;
  TvState current_state = 4;  
}

message CommandReply {
  string device_name = 1;
  string response = 2;
  TvState current_state = 3;  
}

message DeviceRequest {
  string device_name = 1;
}

message TvState {
  string power = 1;
  string source = 2;
  string platform = 3;
}
